# ASD-EXAM

./: CMakeLists.txt  README.md
ABR/: abr.h
Algoritmi_Prova/: Dijkstra_BellmanFord_Kruskal_GRAPH.cpp  LCS_exercise.cpp  greedy_activity_selector.cpp  hashtable_exercise.cpp  huffman_codifica_decodifica.cpp  recursive_BFS_exercise.cpp  zaino_01_Frazionario_exercise.cpp
Algoritmi_Prova/Min_Heap/: heap_exercise.cpp
Casual_Exercises/: 2_anfore.cpp  dividi_con_riferimento.cpp  file_exercise.cpp  point.cpp  sommatoria_templata.cpp
Casual_Exercises/Stack_Generico_Template/: STACK.h
___ABR___/ABR_ESAME_PANICO/: OUT.txt  abr.hpp  main.cpp  node.hPP
___ABR___/ABR_FRIEND/: ABR.txt  main.cpp
___ABR___/ABR_PANICO/: abr.h  abr.hpp  codaPriorita.cpp  coseDaFare.h  coseDaFare.hpp  main.cpp  tempCodeRunnerFile.hpp  test2.h  test2.hpp
___ABR___/ABR_TUTOR/: abr.hpp  main.cpp  node.h  node.hpp  tempCodeRunnerFile.cpp
___ALGORITMI_PROVA___/HUFFMAN/: huffman_codifica_decodifica
___ALGORITMI_PROVA___/MIN_HEAP/: heap_exercise.cpp
___CASUAL_EXERCISES___/CONCETTI_CLASSI/: esempio_ereditarieta.cpp  polimorfismo_binding.cpp
___CASUAL_EXERCISES___/LIBRO/: libro.cpp
___CASUAL_EXERCISES___/POINT/: point.cpp
___CASUAL_EXERCISES___/PRIMO_ESEMPIO/: primo_test.cpp
___CASUAL_EXERCISES___/RADICE_SLIDE/: radice_slide.cpp
___CASUAL_EXERCISES___/STACK_GENERICO_TEMPLATE/: STACK.cpp  Stack_generico_template.cpp
___GRAPH___/GRAPH_BFS-DFS-CC_PANICO/: graph.hpp  inputG.txt  main.cpp
___GRAPH___/GRAPH_PRIM/: main.cpp  (+1 more)
___HASHTABLE___/: hashtable.hpp  main.cpp
___HEAP___/: heap.hpp  main.cpp
(+20 files in other folders)
